test/successor_ml/should_compile/record-pun-exp.sml
fun f { a, b, c } = { a, b = b + 1, c };
