test/successor_ml/should_not_compile/record_extension_type.sml
type t = { a : int, ... : { b : string }, c : char, ... : { d : word } };
